--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<p>Lambda Notes allows a user to take notes and have the data persist through a backend equipped with a CRUD API and a Sqlite database.
 										The frontend was created using React and CSS. The backend was created using Node and Express with a Sqlite database.</p>
 									<ul class="actions">
-										<li><a href="https://github.com/sashat14/front-end-project-week" target="_blank" class="button">Visit App</a></li>
+										<li><a href="https://lambda-notes-kt.netlify.com" target="_blank" class="button">Visit App</a></li>
 										<li><a href="https://github.com/sashat14/front-end-project-week" target="_blank" class="button">Visit Repo</a></li>
 									</ul>
 								</div>
